attached_assets/Pasted-Missing-source-directories-Fixed-The-debug-output-confirms-your-project-structure-is-now-correctly-1748018237206.txt
Missing source directories: Fixed! The debug output confirms your project structure is now correctly recognized.
Kotlin/Compose version compatibility: Fixed! No more errors about Compose Compiler requires Kotlin version X but you have version Y.
Missing dependencies (Room, Serialization, OkHttp, Firebase, WorkManager, Koin): Fixed! The main application compilation (compileReleaseKotlin and compileDebugKotlin tasks) completed successfully without any "Unresolved reference" errors. This is a huge step forward!
However, a new issue has appeared, but it's very specific:

The New Problem: Robolectric Test Runner Not Found

The build is now failing during the unit test phase, specifically the kaptDebugUnitTestKotlin task.

Look at these lines:

140 /home/runner/work/MarFa/MarFa/app/build/tmp/kapt3/stubs/debugUnitTest/net/marfanet/android/worker/RoutingRulesUpdateWorkerTest.java:3: error: cannot find symbol
141 @org.junit.runner.RunWith(value = RobolectricTestRunner.class)
142                                   ^
143   symbol: class RobolectricTestRunner
144 > Task :app:kaptDebugUnitTestKotlin FAILED
What this means:

Your project has unit tests, and at least one of them (RoutingRulesUpdateWorkerTest.java) is using the @RunWith annotation to specify RobolectricTestRunner as its test runner. The kaptDebugUnitTestKotlin task is responsible for processing annotations in your debug unit test sources, and it essentially needs to understand all the classes referred to by these annotations.

The error cannot find symbol RobolectricTestRunner means that the Robolectric library is not available on the classpath for your unit test compilation.

Solution:

You need to add the Robolectric dependency (and potentially other testing dependencies) to your app/build.gradle.kts file, specifically within the testImplementation scope, and potentially ensure kaptTest is configured if Robolectric or other test-related annotation processors require it.

Here's what you likely need to add/verify in your app/build.gradle.kts inside the dependencies { ... } block:

dependencies {
    // ... your existing dependencies (Room, OkHttp, Firebase, WorkManager, Koin etc.)

    // For local unit tests (running on JVM, using Robolectric)
    testImplementation("junit:junit:4.13.2") // Ensure JUnit is included
    testImplementation("org.robolectric:robolectric:4.12.2") // Use the latest stable version of Robolectric
    // You might also need these for AndroidX Test components in Robolectric tests
    testImplementation("androidx.test:core-ktx:1.5.0") // Or whatever the latest is
    testImplementation("androidx.test.ext:junit-ktx:1.1.5") // Or whatever the latest is

    // If you have Room/Koin/etc. components that generate code for tests
    // (e.g., if you're testing DAOs with actual DB instances), you might need:
    // kaptTest("androidx.room:room-compiler:2.6.1") // Match your Room version
    // kaptTest("io.insert-koin:koin-ksp:3.5.0") // If Koin uses KSP/KAPT for tests
    // etc.
}
Steps to Take:

Open app/build.gradle.kts.
Locate the dependencies { ... } block.
Add/Update the testImplementation dependencies for junit, robolectric, and the androidx.test components as shown above. Crucially, make sure you pick the latest stable versions (check Maven Central or AndroidX release notes). 4.12.2 is a recent Robolectric version, but verify the absolute latest.
Consider kaptTest: If your unit tests (especially those using @Entity or @Dao from Room, or @Inject from Dagger Hilt/Koin if they have test-specific modules) require annotation processing, ensure you have the corresponding kaptTest (or kspTest) dependencies. Usually, if your main kapt works, you just need to add the exact same compiler to the kaptTest scope.
Re-run the CI build.
This problem is much more isolated than the previous ones, focusing solely on the test environment. Once Robolectric is correctly included, your build should finally pass!